Work in progress

--- a/FixFlow/FixFlow.API/appsettings.json
+++ b/FixFlow/FixFlow.API/appsettings.json
@@ -15,5 +15,9 @@
     "AllowedImageExtensions": [ ".jpg", ".jpeg", ".png", ".webp" ],
     "AllowedDocumentExtensions": [ ".pdf", ".doc", ".docx" ],
     "StoragePath": "wwwroot/uploads"
+  },
+  "Stripe": {
+    "PublishableKey": "",
+    "WebhookSecret": ""
   }
 }
