--- a/FixFlow/FixFlow.Infrastructure/FixFlow.Infrastructure.csproj
+++ b/FixFlow/FixFlow.Infrastructure/FixFlow.Infrastructure.csproj
@@ -13,6 +13,7 @@
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
       <PrivateAssets>all</PrivateAssets>
     </PackageReference>
+    <PackageReference Include="Stripe.net" Version="47.2.0" />
   </ItemGroup>
 
   <PropertyGroup>
