--- a/fixflow_mobile/pubspec.yaml
+++ b/fixflow_mobile/pubspec.yaml
@@ -16,6 +16,9 @@ dependencies:
   go_router: ^14.8.1
   cupertino_icons: ^1.0.8
   lucide_icons: ^0.257.0
+  image_picker: ^1.2.1
+  http: ^1.6.0
+  flutter_stripe: ^11.4.0
 
 dev_dependencies:
   flutter_test:
